k8s/manifests-967efc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-967efc
  namespace: journee
  labels:
    app: journee-967efc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-967efc
  template:
    metadata:
      labels:
        app: journee-967efc
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-967efc
          image: gcr.io/my-docker-471807/journee:967efc-da8bbe
          ports:
            - containerPort: 3000
